--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -49,7 +49,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
     width: 4px;
   }
   .blue-bar {
-    height: 94%;
+    height: 100%;
     top: 40px;
     right: 10px;
     background-color: var(--clr-brand-blue);
@@ -149,32 +149,27 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
       <p class="grid-item-ball">
         Cypress End-to-End Testing<i class="fa-solid fa-circle"></i>
       </p>
-      <p class="grid-item-ball clr-brand-blue">
+      <p class="grid-item-ball">
         Javascript Unit Testing<i class="fa-solid fa-circle"></i>
       </p>
+      <h3 class="grid-item-ball">
+        Go<i class="fa-solid fa-circle"></i>
+      </h3>
       <p class="grid-item-ball clr-brand-blue">
-        Project: System Development •<br />Backend (Nest.js + Typescript)<i class="fa-solid fa-circle"></i>
+        API: Backend (Nest.js + Typescript)<i class="fa-solid fa-circle"></i>
       </p>
       <p class="grid-item-ball clr-brand-blue">
-        Project: System Development •<br />Frontend (React • Next.js + Typecript)<i class="fa-solid fa-circle"></i>
+        Full Stack Project: Frontend (Astro.js: Frontend • Go:Backend)<i class="fa-solid fa-circle"></i>
       </p>
     </div>
 
     <div class="relative">
       <div class="bar black-bar-blue"></div>
       <h3 class="grid-item-ball ball-black">
-        2nd Programming Language:<br>Python or Dart • Flutter Project<i class="fa-solid fa-circle"></i>
+        Data: Python or Mobile: Dart • Flutter<i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball ball-black">
-        Keep exploring technologies according to the market.
-        <i class="fa-solid fa-circle"></i>
-      </p>
-      <p class="grid-item-ball ball-black">
-        Enhance skills according to work and challenges.<i
-          class="fa-solid fa-circle"></i>
-      </p>
-      <p class="grid-item-ball ball-black">
-        Strengthen planning, problem solving and systematic thinking. <i
+        Coder > System Engineer <i
           class="fa-solid fa-circle"></i>
       </p>
       <h3 class="grid-item-ball ball-black">
@@ -249,22 +244,22 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
       <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"></i>Object Oriented Programming
       </p>
-      <p class="grid-item-ball grid-item-ball-reverse clr-brand-orange">
+      <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"></i>Data Base Management System
       </p>
-      <p class="grid-item-ball grid-item-ball-reverse clr-brand-orange">
+      <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"></i>Web Development
+      </p>
+      <p class="grid-item-ball grid-item-ball-reverse clr-brand-orange">
+        <i class="fa-solid fa-circle"></i>Smart Data Structures
+      </p>
+      <p class="grid-item-ball grid-item-ball-reverse clr-brand-orange">
+        <i class="fa-solid fa-circle"></i>Mobile Development
       </p>
     </div>
 
     <div class="relative">
       <div class="bar black-bar-orange"></div>
-      <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>Smart Data Structures
-      </p>
-      <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>Mobile Development
-      </p>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
         <i class="fa-solid fa-circle"></i>Microservices & Containers
       </p>
@@ -277,7 +272,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
       </p>
       <h3 class="grid-item-ball grid-item-ball-reverse ball-black">
         <i class="fa-solid fa-circle"> </i>
-         MBA
+         + 2 years specialization / MBA
       </h3>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
         <i class="fa-solid fa-circle"></i>???
