--- a/src/components/ProjectLayout.astro
+++ b/src/components/ProjectLayout.astro
@@ -2,33 +2,14 @@
 import Layout from "../layouts/Layout.astro";
 import ProjectLayoutLinks from "./ProjectLayout-Links.astro";
 import ProjectLayoutHead from "./ProjectLayout-Head.astro";
-import ProjectLayoutBottomStars from "./ProjectLayout-BottomStars.astro";
+import Card from "./Card.astro";
 
-const { project } = Astro.props;
+const { projects } = Astro.props;
 ---
 
 <Layout
   title="Hirashiki Rafael's Portfolio Project"
-  description={project?.data.projectSubtitle}
+  description={projects[0]?.data.projectSubtitle}
 >
-  <ProjectLayoutLinks project={project} />
-  <ProjectLayoutHead project={project} />
 
-  <div class="relative col-start-3 col-span-9">
-    <a href={project?.data.projectURL} target="_blank">
-      <img src={`/Images/${project?.data.thumbnail}.webp`} class="" />
-    </a>
-  </div>
-
-  <ProjectLayoutBottomStars>
-    <ul
-      class={`absolute bottom-6 right-6 font-bold py-8 w-fit ml-auto text-right css-glass-bg px-6`}
-    >
-      {
-        project?.data.projectBulletList.map((option: string) => (
-          <li>❍ {option}</li>
-        ))
-      }
-    </ul>
-  </ProjectLayoutBottomStars>
 </Layout>
