--- a/src/components/ProjectLayout.astro
+++ b/src/components/ProjectLayout.astro
@@ -3,13 +3,19 @@ import Layout from "../layouts/Layout.astro";
 import ProjectLayoutLinks from "./ProjectLayout-Links.astro";
 import ProjectLayoutHead from "./ProjectLayout-Head.astro";
 import Card from "./Card.astro";
+import ProjectLayoutBottomStars from "./ProjectLayout-BottomStars.astro";
 
+const icons = false;
 const { projects } = Astro.props;
 ---
 
-<Layout
-  title="Hirashiki Rafael's Portfolio Project"
-  description={projects[0]?.data.projectSubtitle}
->
-
+<Layout title="Hirashiki Rafael's Portfolio Project" description={}>
+  <ProjectLayoutLinks project={icons} />
+  {
+    projects.map((project: any) => (
+      <>
+        <Card project={project} />
+      </>
+    ))
+  }
 </Layout>
