--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -165,13 +165,11 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
 
     <div class="relative">
       <div class="bar black-bar-blue"></div>
+      <br>
+      <br>
       <h3 class="grid-item-ball ball-black">
         Data: Python or Mobile: Dart • Flutter<i class="fa-solid fa-circle"></i>
       </h3>
-      <p class="grid-item-ball ball-black">
-        Coder > System Engineer <i
-          class="fa-solid fa-circle"></i>
-      </p>
       <h3 class="grid-item-ball ball-black">
         Explore Data Science<br />Mid Developer (System, Front or Full Stack)
         <i class="fa-solid fa-circle"></i>
@@ -274,6 +272,9 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         <i class="fa-solid fa-circle"> </i>
          + 2 years specialization / MBA
       </h3>
+      <p class="grid-item-ball grid-item-ball-reverse ball-black">
+        <i class="fa-solid fa-circle"></i>???
+      </p>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
         <i class="fa-solid fa-circle"></i>???
       </p>
