--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,14 +1,88 @@
-<div class="h-fit col-start-3 col-span-9">
-    <a class="relative w-full block" href={project?.data.projectURL} target="_blank">
-      <img src={`/Images/${project?.data.thumbnail}.webp`} class="" />
+---
+import { Image } from "astro:assets";
+import ProjectLayoutBottomStars from "./ProjectLayout-BottomStars.astro";
+
+const positionAbsolute = false
+const { project } = Astro.props;
+---
+
+<div class="relative h-fit col-start-3 col-span-9 mb-40">
+  <div class="relative w-full block z-50">
+    <img src={`/Images/${project?.data.thumbnail}.webp`} class="" />
+    <div class="flex flex-col gap-5 absolute bottom-0 right-0 font-bold py-4 w-full  text-right css-glass-bg px-6 ">
       <ul
-        class={`absolute bottom-0 right-0 font-bold py-4 w-full  text-right css-glass-bg px-6`}
+        class={``}
       >
         {
           project?.data.projectBulletList.map((option: string) => (
-            <li>❍ {option}</li>
+            <li class="font-semibold">❍ {option}</li>
           ))
         }
       </ul>
-    </a>
+
+      <div class="flex justify-end">
+        {
+          project && (
+            <div class="flex gap-2 h-fit ">
+              {project.data.technologies?.map((ele: string, index: number) => (
+                <Image
+                  src={`/Images/logo_${ele}.png`}
+                  width={30}
+                  height={30}
+                  format="png"
+                  alt="stars bg"
+                  class=""
+                />
+              ))}
+            </div>
+          )
+        }
+      </div>
+
+      <div class="flex justify-end gap-4">
+        <a
+          href={project?.data.githubURL}
+          class="flex flex-col items-center w-fit"
+          target="_blank"
+        >
+          <i class="fa-brands fa-github url-logo-black url-logo-github"></i>
+          <p>Github</p>
+        </a>
+
+        {
+          project?.data.figmaURL && (
+            <a
+              href={project?.data.figmaURL}
+              class="flex flex-col items-center w-fit"
+              target="_blank"
+            >
+              <Image
+                src="/Images/logo_figma.svg"
+                width={144}
+                height={213}
+                format="svg"
+                alt="figma logo"
+                class="url-logo-black"
+              />
+              <p>Figma</p>
+            </a>
+          )
+        }
+
+        {
+          project?.data.projectURL && (
+            <a
+              href={project?.data.projectURL}
+              class="flex flex-col items-center w-fit"
+              target="_blank"
+            >
+              <i class="fa-solid fa-arrow-up-right-from-square url-logo-black" />
+              <p>Project</p>
+            </a>
+          )
+        }
+      </div>
+    </div>
   </div>
+  <ProjectLayoutBottomStars positionAbsolute={positionAbsolute}/>
+</div>
