--- a/src/components/ProjectLayout-Links.astro
+++ b/src/components/ProjectLayout-Links.astro
@@ -1,7 +1,9 @@
 ---
 import { Image } from "astro:assets";
+import ProjectGithubIcon from "./ProjectGithubIcon.astro";
+import ProjectFigmaIcon from "./ProjectFigmaIcon.astro";
 
-const { project, road } = Astro.props;
+const { project, road, icons } = Astro.props;
 ---
 
 <style>
@@ -90,7 +92,7 @@ const { project, road } = Astro.props;
   }
 </style>
 
-<div class="absolute top-8 pl-4 gap-y-4 w-6/6">
+<div class="fixed top-8 pl-4 gap-y-4 w-6/6 z-50">
   <div class="bars-container col-start-1 col-span-full">
     <div class="relative h-bar-container">
       <i class="fa-solid fa-circle star -top-3 -left-1 text-xl opacity-100"></i>
@@ -110,82 +112,53 @@ const { project, road } = Astro.props;
     </div>
   </div>
 
-  <div class="flex flex-col w-fit pt-4 gap-2 justify-center items-center">
-    <a
-      href={!road ? project?.data.githubURL : "https://github.com/hiRafa"}
-      class="flex flex-col items-center w-fit"
-      target="_blank"
-    >
-      <i class="fa-brands fa-github url-logo-black url-logo-github"></i>
-      <p>Github</p>
-    </a>
+  {
+    icons && (
+      <div class="flex flex-col w-fit pt-4 gap-2 justify-center items-center">
+        <ProjectGithubIcon
+          url={!road ? project?.data.githubURL : "https://github.com/hiRafa"}
+        />
 
-    {
-      project?.data.figmaURL && (
-        <a
-          href={project?.data.figmaURL}
-          class="flex flex-col items-center w-fit"
-          target="_blank"
-        >
-          <Image
-            src="/Images/logo_figma.svg"
-            width={144}
-            height={213}
-            format="svg"
-            alt="figma logo"
-            class="url-logo-black"
-          />
-          <p>Figma</p>
-        </a>
-      )
-    }
+        {project?.data.figmaURL && (
+          <ProjectFigmaIcon url={project?.data.figmaURL} />
+        )}
 
-    {
-      project?.data.projectURL && (
-        <a
-          href={project?.data.projectURL}
-          class="flex flex-col items-center w-fit"
-          target="_blank"
-        >
-          <i class="fa-solid fa-arrow-up-right-from-square url-logo-black" />
-          <p>Project</p>
-        </a>
-      )
-    }
-    {
-      project && (
-        <div class="flex flex-col gap-2 h-fit ">
-          {project.data.technologies?.map((ele: string, index: number) => (
+        {project?.data.projectURL && (
+          <ProjectGithubIcon url={project?.data.projectURL} />
+        )}
+        
+        {project && (
+          <div class="flex flex-col gap-2 h-fit ">
+            {project.data.technologies?.map((ele: string, index: number) => (
+              <Image
+                src={`/Images/logo_${ele}.png`}
+                width={30}
+                height={30}
+                format="png"
+                alt="stars bg"
+                class=""
+              />
+            ))}
+          </div>
+        )}
+
+        {road && (
+          <a
+            href="https://www.linkedin.com/in/rafael-hirashiki-7a5733170/"
+            class="flex flex-col items-center w-fit"
+          >
             <Image
-              src={`/Images/logo_${ele}.png`}
-              width={30}
-              height={30}
+              src="/Images/logo_linkedin.png"
+              width={144}
+              height={213}
               format="png"
-              alt="stars bg"
-              class=""
+              alt="linkedin logo"
+              class="url-logo"
             />
-          ))}
-        </div>
-      )
-    }
-
-    {
-      road && (
-        <a
-          href="https://www.linkedin.com/in/rafael-hirashiki-7a5733170/"
-          class="flex flex-col items-center w-fit"
-        >
-          <Image
-            src="/Images/logo_linkedin.png"
-            width={144}
-            height={213}
-            format="png"
-            alt="linkedin logo"
-            class="url-logo"
-          />
-          <p>Linkedin</p>
-        </a>
-      )
-    }
-  </div>
+            <p>Linkedin</p>
+          </a>
+        )}
+      </div>
+    )
+  }
 </div>
