--- a/src/pages/projects2022.astro
+++ b/src/pages/projects2022.astro
@@ -9,6 +9,4 @@ const project03 = await getEntry("projects", "project03");
 const projects2022 = [oldportfolio, project01, project02, project03]
 ---
 
-<ProjectLayout projects={projects2022}>
- 
-</ProjectLayout>
+<ProjectLayout projects={projects2022}></ProjectLayout>
