--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -91,7 +91,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
     <div class="relative flex flex-col h-fit">
       <div class="bar blue-bar"></div>
       <p class="grid-item-ball">
-        Acupuncture • <br />Game Design Video Editing •<br />VFX Design<i
+        Acupuncture <br />Game Design Video Editing<br />VFX Design<i
           class="fa-solid fa-circle"></i>
       </p>
       <h3 class="grid-item-ball">
@@ -171,7 +171,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         Data: Python or Mobile: Dart • Flutter<i class="fa-solid fa-circle"></i>
       </h3>
       <h3 class="grid-item-ball ball-black">
-        Explore Data Science<br />Mid Developer (System, Front or Full Stack)
+        Explore Data Science<br />Mid Engineer (System, Front or Full Stack)
         <i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball ball-black">
