--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,21 +1,32 @@
 ---
 import { Image } from "astro:assets";
 import ProjectLayoutBottomStars from "./ProjectLayout-BottomStars.astro";
+import CardTitle from "./CardTitle.astro";
 
-const positionAbsolute = false
-const { project } = Astro.props;
+const positionAbsolute = false;
+const { project, i } = Astro.props;
 ---
 
-<div class="relative h-fit col-start-3 col-span-9 mb-40">
-  <div class="relative w-full block z-50">
-    <img src={`/Images/${project?.data.thumbnail}.webp`} class="" />
-    <div class="flex flex-col gap-5 absolute bottom-0 right-0 font-bold py-4 w-full  text-right css-glass-bg px-6 ">
-      <ul
-        class={``}
-      >
+<div
+  class="relative col-start-2 col-span-10 mb-20 max-sm:col-start-3 max-sm:col-span-9"
+>
+
+  <div class="relative card-height">
+    <div
+      class="absolute top-0 bottom-0 right-0 m-auto h-full w-full overflow-hidden flex justify-center"
+    >
+      <img
+        src={`/Images/${project?.data.thumbnail}.webp`}
+        class="object-cover max-h-none max-w-none"
+      />
+    </div>
+    <div
+      class="absolute z-50 -bottom-4 -right-4 flex flex-col gap-5 font-bold py-4 w-11/12 text-right css-glass-bg px-6"
+    >
+      <ul class={``}>
         {
           project?.data.projectBulletList.map((option: string) => (
-            <li class="font-semibold">❍ {option}</li>
+            <li class="font-semibold">✦ {option}</li>
           ))
         }
       </ul>
@@ -25,14 +36,16 @@ const { project } = Astro.props;
           project && (
             <div class="flex gap-2 h-fit ">
               {project.data.technologies?.map((ele: string, index: number) => (
-                <Image
-                  src={`/Images/logo_${ele}.png`}
-                  width={30}
-                  height={30}
-                  format="png"
-                  alt="stars bg"
-                  class=""
-                />
+                <div class="w-8 h-8 flex justify-center">
+                  <Image
+                    src={`/Images/logo_${ele}.png`}
+                    width={30}
+                    height={30}
+                    format="png"
+                    alt="stars bg"
+                    class="h-full w-auto"
+                  />
+                </div>
               ))}
             </div>
           )
@@ -40,14 +53,18 @@ const { project } = Astro.props;
       </div>
 
       <div class="flex justify-end gap-4">
-        <a
-          href={project?.data.githubURL}
-          class="flex flex-col items-center w-fit"
-          target="_blank"
-        >
-          <i class="fa-brands fa-github url-logo-black url-logo-github"></i>
-          <p>Github</p>
-        </a>
+        {
+          project?.data.githubURL && (
+            <a
+              href={project?.data.githubURL}
+              class="flex flex-col items-center w-fit"
+              target="_blank"
+            >
+              <i class="fa-brands fa-github url-logo-black url-logo-github" />
+              <p>Github</p>
+            </a>
+          )
+        }
 
         {
           project?.data.figmaURL && (
@@ -84,5 +101,5 @@ const { project } = Astro.props;
       </div>
     </div>
   </div>
-  <ProjectLayoutBottomStars positionAbsolute={positionAbsolute}/>
+  <ProjectLayoutBottomStars positionAbsolute={positionAbsolute} />
 </div>
