--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,14 +18,14 @@ const navObj = [
     navSubtitle: "to INFINITY and Beyond!",
   },
   {
-    path: "/api",
-    navTitle: "Works at Agendae+",
-    navSubtitle: "System Engineer (Backend)",
-  },
-  {
     path: "/a3",
     navTitle: "Works at A3",
     navSubtitle: "Frontend Engineer",
+  },
+  {
+    path: "/agendae",
+    navTitle: "Works at Agendae+",
+    navSubtitle: "System Engineer (Backend)",
   },
   {
     path: "/projects2022",
@@ -133,8 +133,8 @@ const navObj = [
           </section>
 
           <section class="text-2xl max-lg:text-lg max-md:text-lg max-sm:text-base font-bold">
-            <h2 class="pt-4 pb-4"><i class="fa-regular fa-circle"></i> Web Frontend Developer (Junior)</h2>
-            <h3 class="pb-4"><i class="fa-solid fa-moon"></i> System Developer (graduating)</h3>
+            <h2 class="pt-4 pb-4"><i class="fa-regular fa-circle"></i> Web Frontend Engineer (Junior)</h2>
+            <h3 class="pb-4"><i class="fa-solid fa-moon"></i> System Engineer (graduating)</h3>
           </section>
 
           <section class="">
@@ -143,7 +143,7 @@ const navObj = [
               Passionate for connecting stars, understanding problems, finding
               solutions, upgrading performances and flows.
             </p>
-            <p>Special interest in health, environment and nature fields</p>
+            <p>Special interest in health and nature fields</p>
           </section>
 
           <nav class="self-end justify-self-end relative z-50 pb-20 max-md:pb-10 max-md:pt-4">
