--- a/src/components/ProjectLayout-Links.astro
+++ b/src/components/ProjectLayout-Links.astro
@@ -92,7 +92,7 @@ const { project, road, icons } = Astro.props;
   }
 </style>
 
-<div class="fixed top-8 pl-4 gap-y-4 w-6/6 z-50">
+<div class=" absolute top-8 pl-4 gap-y-4 w-6/6">
   <div class="bars-container col-start-1 col-span-full">
     <div class="relative h-bar-container">
       <i class="fa-solid fa-circle star -top-3 -left-1 text-xl opacity-100"></i>
